After an evaluation, GNOME has moved from Bugzilla to GitLab. Learn more about GitLab.
No new issues can be reported in GNOME Bugzilla anymore.
To report an issue in a GNOME project, go to GNOME GitLab.
Do not go to GNOME Gitlab for: Bluefish, Doxygen, GnuCash, GStreamer, java-gnome, LDTP, NetworkManager, Tomboy.
Bug 755085 - Fix boot menu when only one boot exists
Fix boot menu when only one boot exists
Status: RESOLVED FIXED
Product: gnome-logs
Classification: Other
Component: general
git master
Other All
: Normal normal
: ---
Assigned To: gnome-logs maintainer(s)
gnome-logs maintainer(s)
Depends on:
Blocks:
 
 
Reported: 2015-09-15 22:14 UTC by Lars Karlitski
Modified: 2015-09-25 15:31 UTC
See Also:
GNOME target: ---
GNOME version: ---


Attachments
Fix boot menu when only one boot exists (1.80 KB, patch)
2015-09-15 22:14 UTC, Lars Karlitski
none Details | Review
Fix boot menu when only one boot exists (1.81 KB, patch)
2015-09-17 11:05 UTC, Lars Karlitski
committed Details | Review

Description Lars Karlitski 2015-09-15 22:14:16 UTC
The boot menu and subtitle were empty when only a single boot existed in
the journal. Turn around loop logic to make it more clear and get rid of
this edge case.
Comment 1 Lars Karlitski 2015-09-15 22:14:19 UTC
Created attachment 311419 [details] [review]
Fix boot menu when only one boot exists
Comment 2 David King 2015-09-17 09:16:45 UTC
Review of attachment 311419 [details] [review]:

This gives me the first five boots in the journal, not the most recent five boots. :-(
Comment 3 Lars Karlitski 2015-09-17 11:05:00 UTC
Created attachment 311543 [details] [review]
Fix boot menu when only one boot exists

> This gives me the first five boots in the journal, not the most recent five
> boots. :-(

Oops, you're right of course. Thanks for the catch!

Should boot more often.
Comment 4 David King 2015-09-17 11:13:54 UTC
Review of attachment 311543 [details] [review]:

Works nicely, thanks! Let's push this after the freeze, for 3.18.1.
Comment 5 David King 2015-09-25 15:31:37 UTC
Review of attachment 311543 [details] [review]:

Pushed to master as commit 5244716c4abd106ad49d5101c6b77fbdc3a4c3bb.