Fix boot menu when only one boot exists

The boot menu and subtitle were empty when only a single boot existed in
the journal. Turn around loop logic to make it more clear and get rid of
this edge case.

https://bugzilla.gnome.org/show_bug.cgi?id=755085